# django_celery

./: .coverage  .coveragerc  .gitignore  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
compose/: auto_deploy.sh
compose/local/django/: Dockerfile  entrypoint
compose/local/django/celery/beat/: start
compose/local/django/celery/flower/: start
compose/local/django/celery/worker/: start  start_1  start_2
compose/local/django/celery/worker_1/: start
compose/local/django/celery/worker_2/: start
compose/production/django/: Dockerfile  entrypoint  start
compose/production/django/celery/beat/: start
compose/production/django/celery/flower/: start
compose/production/django/celery/worker/: start
compose/production/nginx/: nginx.conf
django_celery/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
polls/: base_task.py  consumers.py  factories.py  forms.py  routing.py  tasks.py  tests.py  urls.py  views.py
polls/management/commands/: celery_worker.py
polls/templates/: form.html  form_ws.html  user_subscribe.html
tdd/: admin.py  factories.py  forms.py  tasks.py  urls.py  views.py
tdd/migrations/: 0001_initial.py
tdd/templates/: member_signup.html  member_signup_success.html
tests/: conftest.py  settings.py
tests/polls/: test_base_task.py  test_task.py  test_view.py
tests/tdd/: conftest.py  test_models.py  test_tasks.py  test_views.py
