[tool.poetry]
name = "django_celery_tutorial"
version = "0.1.0"
description = ""
authors = ["maciej.sitowski <maciej.sitowski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "4.0.7"
celery = "^5.2.7"
redis = "^4.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
