[tool.poetry]
name = "django_celery_tutorial"
version = "0.1.0"
description = ""
authors = ["maciej.sitowski <maciej.sitowski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "4.0.7"
celery = "^5.2.7"
redis = "^4.5.3"
flower = "^1.2.0"
psycopg2-binary = "2.9.2"
requests = "2.28.1"
channels = "^3.0.5"
channels-redis = "^3.4.1"
django-celery-beat = "^2.5.0"
watchfiles = "^0.19.0"
factory-boy = "3.2.1"
coverage = "6.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
